--- a/website/views/notification.html
+++ b/website/views/notification.html
@@ -1,25 +1,38 @@
 <html>
+<head>
+	<title>Notifications</title>
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
+	<!-- Mobile compatibility -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<style type="text/css">
+	div.container {
+		margin-top: 50px;
+	}
+	</style>
+</head>
 <body>
-	<form method="post" action="notification.php">
-		<input type="text" name="netid" size="10">@illinois.edu
-		<br/>
-		Notify me when 
-		<select name="facility">
-			{% for row in facilities %}
-			<option value={{ row[0] }}>{{row[1]}}</option>
-			{% endfor %}
-		</select>
-		<br/>
-		is serving 
-		<select name="item">
-			{% for item in items %}
-			<option value="{{item[0]}}">{{item[0]}}</option>
-			{% endfor %}
-		</select>
-		<br/>
+	<div class="container">
+	<form role="form" method="post" action="notification.php">
+		<div class="form-group">
+			<input type="text" name="netid" id="netid" size="10" placeholder="NetID">@illinois.edu
+		</div>
+		<div class="form-group">Notify me when 
+				<select name="facility">
+					{% for row in facilities %}
+					<option value={{ row[0] }}>{{row[1]}}</option>
+					{% endfor %}
+				</select></div>
+		<div class="form-group">is serving 
+				<select name="item">
+					{% for item in items %}
+					<option value="{{item[0]}}">{{item[0]}}</option>
+					{% endfor %}
+				</select></div>
 		<input type="submit" value="Submit" name="submit"/>
 	</form>
+	</div>
 </body>
 
 </html>
