--- a/website/views/menu.html
+++ b/website/views/menu.html
@@ -1,9 +1,11 @@
-<html>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Menu{% endblock %}
+
+{% block body %}
 
 {% for row in items %}
 {{row[1]}} <br/>
 {% endfor %}
 
-</body>
-</html>
+{% endblock %}
