Basic user authentication is in the works

--- a/website/views/index.html
+++ b/website/views/index.html
@@ -6,6 +6,8 @@
 
 <p>To get started, select a dining hall</p>
 
+<p>{{ user }}</p>
+
 <form method="POST" action='/facility.php'>
 <select name='facility'>
 
