Previously submitted ratings now show on menus

--- a/website/views/menu.html
+++ b/website/views/menu.html
@@ -12,7 +12,7 @@
 	</span>
 	{% if user %}
 	<span class="rating_wrapper" style="float:right">
-		<input class="rating" data-clearable="remove" data-max="5" data-min="1" type="number" />
+		<input class="rating" data-clearable="remove" data-max="5" data-min="1" type="number" value="{{row[1]}}"/>
 	</span>
 	{% endif %}
 	</li>
