--- a/website/views/notification.html
+++ b/website/views/notification.html
@@ -1,36 +1,28 @@
-<html>
-<head>
-	<title>Notifications</title>
-	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+{% extends 'base.html' %}
 
-	<!-- Mobile compatibility -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+{% block title %}Notifications{% endblock %}
 
-	<style type="text/css">
-	div.container {
-		margin-top: 50px;
-	}
-	</style>
-</head>
-<body>
-	<div class="container">
-	{{ user }}
-	<form role="form" method="post" action="notification.php">
-		<div class="form-group">Notify me when 
-				<select name="facility">
-					{% for row in facilities %}
-					<option value={{ row[0] }}>{{row[1]}}</option>
-					{% endfor %}
-				</select></div>
-		<div class="form-group">is serving 
-				<select name="item">
-					{% for item in items %}
-					<option value="{{item[0]}}">{{item[0]}}</option>
-					{% endfor %}
-				</select></div>
-		<input type="submit" value="Submit" name="submit"/>
-	</form>
-	</div>
-</body>
 
-</html>
+{% block body %}
+
+        <div class="container">
+        <form role="form" method="post" action="notification.php">
+                {{ user }}
+                <div class="form-group">Notify me when
+                                <select name="facility">
+                                        {% for row in facilities %}
+                                        <option value={{ row[0] }}>{{row[1]}}</option>
+                                        {% endfor %}
+                                </select></div>
+                <div class="form-group">is serving
+                                <select name="item">
+                                        {% for item in items %}
+                                        <option value="{{item[0]}}">{{item[0]}}</option>
+                                        {% endfor %}
+                                </select></div>
+                <input type="submit" value="Submit" name="submit"/>
+        </form>
+        </div>
+
+{% endblock %}
+~                   
