--- a/website/views/base.html
+++ b/website/views/base.html
@@ -12,7 +12,25 @@
 
 
 <body>
-	<div class="site_title">U of I Dining Hall Menus</div>
+	<div class="top-section">
+		<div class="top-menu">
+			{% if is_logged_in %}
+				<a href="myrecommendations.php">My Recommendations</a>
+				|
+				<a href="myratings.php">My Ratings</a>
+				|
+				<a href="notification.php">My Notifications</a>
+				|
+				<a href="google_auth.php?logout">Log Out</a>
+			{% else %}
+				<a href="google_auth.php">Log In</a>
+			{% endif %}
+		</div>
+
+		<div class="site-title">
+			<a href="/">U of I Dining Hall Menus</a>
+		</div>
+	</div>
 
 	<div class="main">
 		{% block body %}
