Remove loading text from modal

--- a/website/views/myrecommendations.html
+++ b/website/views/myrecommendations.html
@@ -33,7 +33,7 @@
 <div class="modal fade food-item-modal" tabindex="-1" role="dialog" aria-labelledby="nutritionModal" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content" id="nutrition-modal">
-      ...
+        <!-- nutrition table is inserted here -->
     </div>
   </div>
 </div>
