--- a/website/views/facility.html
+++ b/website/views/facility.html
@@ -4,10 +4,29 @@
 
 {% block body %}
 
+<style type="text/css">
+input[type=submit] {
+  background: transparent;
+  border: 0;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: none;
+}
+
+form {
+  margin-bottom: 0em;
+}
+</style>
+
 <h1>{{facility_name}}</h1>
 
 {% for row in menus %}
-<a href='/menu.php?menu_id={{row[0]}}'>{{row[1]}}  --  {{row[3]}}</a><br>
+<form action="menu.php" method="post">
+    <input type="hidden" name="menu_id" value="{{row[0]}}">
+    <input type="submit" value="{{row[1]}}  --  {{row[3]}}">
+</form><br>
 {% endfor %}
 
 {% endblock  %}
